--- a/samTemplate.yaml
+++ b/samTemplate.yaml
@@ -11,6 +11,7 @@ Resources:
       Description: 'Lambda function for Demo'
       MemorySize: 128
       Timeout: 30
+      Role: 'arn:aws:iam::551638562717:role/LambdaDeploymentStack-CDDemoLambdaRole-1QN6X8EUGQC8W'
       Events:
         getAZsAPI:
           Type: Api
