--- a/samTemplate.yaml
+++ b/samTemplate.yaml
@@ -2,7 +2,7 @@ AWSTemplateFormatVersion: '2010-09-09'
 Transform: 'AWS::Serverless-2016-10-31'
 Description: Demo Lambda
 Resources:
-  CDDemoLambda:
+  LambdaCD:
     Type: 'AWS::Serverless::Function'
     Properties:
       Handler: lambda_function.lambda_handler
@@ -21,3 +21,17 @@ Resources:
       Environment:
         Variables:
           REGION: us-east-1
+
+Outputs:
+
+   LambdaCDApi:
+      Description: "API Gateway endpoint URL for getAZs function"
+      Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/getazs/"
+
+    LambdaCD:
+      Description: "Demo Lambda Function ARN"
+      Value: !GetAtt LambdaCD.Arn
+
+    LambdaCDFunctionIamRole:
+      Description: "Implicit IAM Role created for LambdaCD function"
+      Value: !GetAtt HelloWorldFunctionRole.Arn
