--- a/samTemplate.yaml
+++ b/samTemplate.yaml
@@ -9,7 +9,7 @@ Resources:
     Properties:
       Handler: lambda_function.lambda_handler
       Runtime: python3.6
-      CodeUri: .
+      CodeUri: ./LambdaCode
       Description: >-
         A simple backend (read/write to DynamoDB) with a RESTful API endpoint
         using Amazon API Gateway.
